# parser_HeadHunter_SuperJob

./: .gitignore  README.md  config.py  main.py  pyproject.toml
abstracts/: abstract_api_connect.py  abstract_saver.py
src/: headhunter.py  saver.py  superjob.py  vacancy.py  vacancy_handler.py
utils/: user_interaction.py
